# mayafbx

./: .dockerignore  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  justfile  missing_properties.txt  pyproject.toml  setup.py  test_mayafbx.py  zensical.toml
.github/: README.md  release-drafter.yml
.github/workflows/: docs.yml  github-pages.yml  release-drafter.yml  release.yml  style.yml  tests-runner.yml  tests.yml
docs/: api.md  conf.py  index.md  reference.rst
docs/_ext/: autodoc_fbxpropertyfield.py  autoenum_patch.py  resolve_typevar.py
docs/extensions/: unwrap_type_alias.py
docs/fbx_property_field/: __init__.py
docs/source/: conf.py  index.rst
docs/stylesheets/: extra.css
docs/templates/python/material/docstring/: admonition.html.jinja
src/mayafbx/: __init__.py  bases.py  enums.py  exceptions.py  export.py  exporter.py  importer.py  utils.py
tests/: conftest.py  test_mayafbx.py
