[project]
name = "mayafbx"
description = "Python wrapper for Autodesk Maya FBX plugin"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Thibaud Gambier" }]
keywords = ["fbx", "maya"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[project.urls]
Changelog = "https://mayafbx.readthedocs.io/latest/changelog.html"
Documentation = "https://mayafbx.readthedocs.io/latest"
Source = "https://github.com/tahv/mayafbx"

[build-system]
requires = ["hatch-vcs", "hatch-zipped-directory", "hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "coverage>=7.2.7",
  "furo>=2023.3.27",
  "mypy>=1.4.1",
  "myst-parser>=1.0.0",
  "pytest>=7.4.4",
  "sphinx>=5.3.0",
  "sphinx-autobuild>=2021.3.14",
  "sphinx-toolbox>=4.1.2",
  "types-maya>=0.4.0",
]

[tool.hatch]
version.source = "vcs"
version.raw-options.local_scheme = "no-local-version"
build.targets.zipped-directory.install-name = ""
build.targets.zipped-directory.sources = ["src"]
build.targets.zipped-directory.packages = ["src/mayafbx"]

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--durations-min=0.05",
  "--durations=0",
]
testpaths = ["src", "tests"]

[tool.coverage.run]
source = ["src/"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "# pragma: no cover",
  "if (False|0|TYPE_CHECKING):",
  "if __name__ == ['\"]__main__['\"]:",
  "@overload",  # https://github.com/nedbat/coveragepy/issues/970
]

[tool.coverage.paths]
source = ["src/", "*/src"]

[tool.mypy]
strict = true
mypy_path = ["src"]
files = ["src", "tests"]

[tool.ruff]
lint.select = ["ALL"]
lint.flake8-tidy-imports.ban-relative-imports = "all"
lint.ignore = [
  "D107",  # Missing docstring in `__init__`
  "D105",  # Missing docstring in magic method
  "FIX002",  # Line contains TODO, consider resolving the issue
  "TD003",  # Missing issue link for this TODO
]
lint.pydocstyle.convention = "google"
lint.per-file-ignores."tests/**/*" = [
  "INP001",  # File is part of an implicit namespace package. Add an `__init__.py`
  "PLR2004",  # Magic value used in comparison, consider replacing with a constant variable
  "PLC0415",  # `import` should be at the top-level of a file
  "S101",  # Use of `assert` detected
]
lint.per-file-ignores."docs/**/*.py" = [
  "INP001",  # File is part of an implicit namespace package. Add an `__init__.py`
]
lint.per-file-ignores."docs/_ext/*.py" = [
  "S101",  # Use of `assert` detected
  "PLC0415",  # `import` should be at the top-level of a file
]
