[project]
name = "mayafbx"
description = "Python wrapper for Autodesk Maya FBX plugin"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Thibaud Gambier" }]
keywords = ["fbx", "maya"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[project.urls]
Changelog = "https://mayafbx.readthedocs.io/latest/changelog.html"
Documentation = "https://mayafbx.readthedocs.io"
Source = "https://gitlab.com/tahv/mayafbx"

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "test" },
  { include-group = "types" },
]
docs = [
  "black>=26.5.1",
  "mkdocstrings-python>=2.0.3",
  "zensical>=0.0.43",
]
test = [
  "coverage>=7.2.7",
  "pytest>=7.4.4",
]
types = [
  "mypy>=1.4.1",
  "types-maya>=0.4.0",
]

[build-system]
requires = ["hatch-vcs", "hatch-zipped-directory", "hatchling"]
build-backend = "hatchling.build"

[tool.coverage]
run.source = ["src/"]
run.branch = true
report.show_missing = true
report.skip_covered = true
report.exclude_lines = [
  "# pragma: no cover",
  "if (False|0|TYPE_CHECKING):",
  "if __name__ == ['\"]__main__['\"]:",
  # Protocol: beginning of line or colon + elipsis + comment or eol
  '(^|:) +\.{3}( *#|$)',
]
path.source = ["src/", "*/src"]

[tool.hatch]
version.source = "vcs"
version.raw-options.local_scheme = "no-local-version"
build.targets.zipped-directory.install-name = ""
build.targets.zipped-directory.sources = ["src"]
build.targets.zipped-directory.packages = ["src/mayafbx"]

[tool.hed]
changelog = "CHANGELOG.md"
capture-start = '^## \[{tag}\]'
capture-end = "^## "
diff-url = "https://gitlab.com/tahv/mayafbx/-/compare/{prev}...{tag}"
softbreak = true
title = "{tag}"
top-heading = 2

[tool.mypy]
strict = true
mypy_path = ["src"]
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--durations-min=0.05",
  "--durations=0",
]
testpaths = ["src", "tests"]

[tool.ruff]
lint.select = ["ALL"]
lint.flake8-tidy-imports.ban-relative-imports = "all"
lint.ignore = [
  "D100",  # Missing docstring in public module
  "D107",  # Missing docstring in `__init__`
  "D105",  # Missing docstring in magic method
  "FIX002",  # Line contains TODO, consider resolving the issue
  "TD003",  # Missing issue link for this TODO
]
lint.pydocstyle.convention = "google"
lint.per-file-ignores."tests/**/*" = [
  "INP001",  # File is part of an implicit namespace package. Add an `__init__.py`
  "PLR2004",  # Magic value used in comparison, consider replacing with a constant variable
  "PLC0415",  # `import` should be at the top-level of a file
  "S101",  # Use of `assert` detected
]
lint.per-file-ignores."docs/fbx_property_field/*.py" = [
  "D104",  # Missing docstring in public package
]

[tool.rumdl]
line_length = 80
flavor = "standard"
MD013.reflow = true
MD013.reflow-mode = "semantic-line-breaks"
per-file-ignores."README.md" = [
  "MD033",  # Inline HTML found
  "MD041",  # First line in file should be a level 1 heading
]

[tool.uv.dependency-groups]
docs = { requires-python = ">=3.12" }
